# scalable-ai-chat

./: .gitignore  LICENSE  README.md  REFACTOR_PLAN.md
.github/chatmodes/: MyTeacher.chatmode.md
.github/instructions/: general.instructions.md  python.instructions.md  terraform.instructions.md
.github/workflows/: agent-client-BUILD.yml  front-service-BUILD.yml  history-api-BUILD.yml  history-worker-BUILD.yml  llm-worker-BUILD.yml  memory-api-BUILD.yml  memory-worker-BUILD.yml  sse-service-BUILD.yml  test-client-BUILD.yml  web-client-BUILD.yml
docs/: Architecture.md  Contracts.md  HowToRun.md  Observability.md
docs/protocol/: README.md  agent-ui-events.schema.json
docs/protocol/artifacts/: a2ui-profile.schema.json
docs/protocol/examples/: run-finished.json  run-started.json  text-message-content.json  tool-call-result.json
observability/: app_insights.kql  tokens.kql  tokens_by_app.kql  tokens_by_app_piechart.kql  tokens_by_app_timechart.kql  tokens_by_model_timechart.kql
scripts/: dev-start.ps1  evaluate_safety_examples.py  validate_artifact_examples.py  validate_protocol_examples.py
src/agent_client/: Dockerfile  package-lock.json
src/agent_client/.next/: BUILD_ID  fallback-build-manifest.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.js  required-server-files.json  routes-manifest.json  trace  trace-build
src/agent_client/app/: layout.tsx  page.tsx  styles.css
src/agent_client/lib/: runEventAdapter.ts
src/front_service/: .env.example  README.md  main.py  protocol.py  pyproject.toml
src/history_api/: .env.example  main.py  pyproject.toml
src/history_worker/: .env.example  README.md  main.py  pyproject.toml
src/llm_worker/: .env.example  README.md  main.py  protocol.py  pyproject.toml
src/memory_api/: .env.example  main.py  pyproject.toml
src/memory_worker/: .env.example  main.py  pyproject.toml
src/sse_service/: .env.example  README.md  main.py  protocol.py  pyproject.toml
src/test_client/: .env.example  Dockerfile
src/web_client/public/: env.js
terraform/: .terraform.lock.hcl  ai.foundry.tf  ai.model.tf  container_app_env.tf  container_apps.agent_client.tf  container_apps.front_service.tf  container_apps.history_api.tf  container_apps.history_worker.tf  container_apps.llm_worker.tf  container_apps.memory_api.tf  container_apps.memory_worker.tf  container_apps.sse_service.tf  container_apps.web_client.tf  cosmos.memory.tf  cosmos.tf  identity.tf  locals.tf  networking.tf  rbac.cosmos.tf  rbac.llm.tf  rbac.redis.tf  rbac.service_bus.tf  rbac.storage.tf  storage.tf  variables.tf
(+461 files in other folders)
