[project]
name = "scalable-chat-history-worker"
version = "0.1.0"
description = "History worker service for scalable chat using Azure Service Bus and Cosmos DB"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "azure-identity>=1.25.3",
    "azure-monitor-opentelemetry>=1.8.9",
    "azure-servicebus==7.14.2",
    "azure-cosmos>=4.8.0",
    "opentelemetry-instrumentation-fastapi>=0.54b1",
    "opentelemetry-instrumentation-openai-v2>=1.62.2",
    "opentelemetry-sdk>=1.33.1",
    "python-dotenv==1.1.0",
    "openai>=2.44.0",
    "redis>=5.0.0",
    "redis-entraid>=1.0.0",
]